--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Atendimento - Geração de Senha</title>
+<title>COV - Atendimento</title>
 <style>
   body {
     font-family: 'Arial Black', sans-serif;
@@ -21,8 +21,8 @@
   }
 
   .logo {
-    width: 120px;
-    height: 120px;
+    width: 180px;
+    height: 180px;
     background-color: #222;
     border-radius: 15px;
     display: flex;
@@ -159,10 +159,10 @@
 <div id="relogio"></div>
 
 <h2 id="senha-display">SENHA 000</h2>
-<h3 id="nome-display">PACIENTE</h3>
+<h3 id="nome-display">CLIENTE</h3>
 <span id="dataInicio">--/--/----</span>
 
-<input type="text" id="nomePaciente" placeholder="NOME DO PACIENTE">
+<input type="text" id="nomePaciente" placeholder="NOME DO CLIENTE">
 
 <!-- Grupo 1: Geração e Controle -->
 <div class="button-group">
